--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -636,3 +636,21 @@ pre tt:after {
   color: white;
   text-decoration: none;
 }
+
+/* Netlfiy Identity */
+.netlify-identity-menu {
+  list-style: none;
+  color: none;
+  margin: 0;
+}
+.netlify-identity-signup {
+  color: white;
+}
+
+.netlify-identity-login {
+  color: white;
+}
+
+.netlify-identity-logout {
+  color: white;
+}
